Adding Sport Plan

--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -64,7 +64,7 @@
 
             <Button
                 android:id="@+id/forgetBtn"
-                style="@style/Button1"
+                style="@style/PrimaryBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
