--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -111,7 +111,7 @@
 
             <Button
                 android:id="@+id/signupBtn"
-                style="@style/Button1"
+                style="@style/PrimaryBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
