--- a/app/src/main/res/layout/activity_sportplans.xml
+++ b/app/src/main/res/layout/activity_sportplans.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ir.geek.parvaneh.NewSportPlanActivity">
 
-    <include layout="@layout/navigation_view"/>
+    <include layout="@layout/navigation_view" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,22 +17,29 @@
             android:id="@+id/my_toolbar"
             layout="@layout/toolbar" />
 
-        <!-- <include
-             layout="@layout/sport_plans_item"
-             android:layout_width="match_parent"
-             android:layout_height="180dp"
-             android:layout_below="@id/my_toolbar"
-             android:layout_margin="10dp" /> -->
+
         <ListView
             android:id="@+id/spList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/my_toolbar"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
             android:background="@null"
-            android:clickable="false">
+            android:clickable="false"
+            android:layout_below="@id/my_toolbar"
+            android:layout_marginBottom="70dp">
 
         </ListView>
+
+        <Button
+            android:id="@+id/new_sp_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="10dp"
+            style="@style/PrimaryBtn"
+            android:elevation="4dp"
+            android:text="@string/new_sp_btn"
+            android:translationZ="6dp"/>
 
     </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
