--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -287,7 +287,7 @@
                     </android.support.design.widget.TextInputLayout>
                 </RelativeLayout>
 
-                <EditText
+                <TextView
                     android:id="@+id/edite_show_account"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
