debug user account info activity

--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -45,7 +45,7 @@
                         android:padding="15dp">
 
                         <TextView
-                            android:id="@+id/edite_pss"
+                            android:id="@+id/edit_pass"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
@@ -54,14 +54,13 @@
                             android:textColor="@color/dark"
                             android:textSize="16sp"
                             android:textStyle="bold" />
-
                         <TextView
-                            android:id="@+id/edite_pssword"
+                            android:id="@+id/done_btn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:text="@string/edit"
-                            android:textColor="@color/blue_grey"
+                            android:text="@string/done"
+                            android:textColor="@color/link"
                             android:textSize="16sp"
                             android:textStyle="bold" />
                     </RelativeLayout>
@@ -91,9 +90,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@null"
-                            android:focusable="false"
-                            android:clickable="false"
-                            android:text="رمز قبلی"
+                            android:hint="رمز قبلی"
                             android:inputType="textPassword"
                             android:maxLines="1"
                             android:singleLine="true"
@@ -119,9 +116,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@null"
-                            android:focusable="false"
-                            android:clickable="false"
-                            android:text="رمز جدید"
+                            android:hint="رمز جدید"
                             android:inputType="textPassword"
                             android:maxLines="1"
                             android:singleLine="true"
@@ -147,12 +142,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@null"
-                            android:text="تکرار رمز جدید"
+                            android:hint="تکرار رمز جدید"
                             android:inputType="textPassword"
                             android:maxLines="1"
                             android:singleLine="true"
-                            android:focusable="false"
-                            android:clickable="false"
                             android:textSize="20dp"
                             android:textStyle="bold" />
 
