--- a/app/src/main/res/layout/activity_massage.xml
+++ b/app/src/main/res/layout/activity_massage.xml
@@ -1,8 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ir.geek.parvaneh.MassageActivity">
+    android:id="@+id/drawer"
+    tools:context="ir.geek.parvaneh.SportTestsActivity"
+    >
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/navigation_view"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/mdtp_background_color"
+        android:layoutDirection="rtl">
+
+        <include
+            android:id="@+id/my_toolbar"
+            layout="@layout/toolbar" />
+
+        <TextView
+            android:id="@+id/massage_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:textSize="35dp"
+            android:textColor="#000000"
+            android:layout_below="@id/my_toolbar"
+            android:padding="5dp"
+            android:layout_marginRight= "10dp"/>
+
+        <RelativeLayout
+            android:id="@+id/relvideo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_below="@id/massage_type">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_description"
+                android:layout_marginRight="10dp"/>
+
+            <TextView
+                android:id="@+id/txt1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="35dp"
+                android:text="آسان"
+                android:textSize="15dp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_timer"
+                android:layout_marginRight="85dp"/>
+
+            <TextView
+                android:id="@+id/txtvideotime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="110dp"
+                android:text="120 دقیقه"
+                android:textSize="15dp" />
+
+
+        </RelativeLayout>
+
+        <VideoView
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/relvideo"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/txtdescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/video"
+            android:text="ماساژ یا ورزمان به دستکاری لایه‌های سطحی و عمیق عضلانی و بافت همبند با استفاده از تکنیک‌های مختلف، به منظور افزایش عملکرد، کمک در روند درمان، و ترویج آرامش و آسایش است. ماساژ شامل فشار ثابت یا در حال حرکت یا لرزش، و کمک به حرکات مکانیکی بدن است که می‌تواند با دست، انگشتان، آرنج، زانو، ساعد، و پاها انجام می‌شود. بافت هدف ماساژ شامل عضلات، تاندونها، رباطها، فاسیا، پوست، مفاصل، یا سایر بافت همبند، و همچنین رگهای لنفاوی، یا اندام‌های دستگاه گوارش است. به فرد ماساژدهنده گفته می‌شود."
+            android:textSize="20dp" />
+
+    </RelativeLayout>
+
+</android.support.v4.widget.DrawerLayout>
