--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -154,4 +154,12 @@
         android:background="#99000000"
         android:padding="100dp"
         android:visibility="gone" />
+
+    <Button
+        android:id="@+id/DeleteDB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="DeleteDb" />
 </RelativeLayout>
