--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -109,6 +109,14 @@
 
 
     </RelativeLayout>
+    <Button
+        android:id="@+id/DeleteDB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="62dp"
+        android:text="DeleteDb" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -123,12 +131,14 @@
             android:layout_height="wrap_content"
             android:text="@string/signupQ" />
 
+
         <TextView
             android:id="@+id/signUpLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/signupLink"
             android:textColor="@color/link" />
+
     </LinearLayout>
     <!-- Login progress -->
     <ProgressBar
