--- a/app/src/main/res/layout/activity_massages.xml
+++ b/app/src/main/res/layout/activity_massages.xml
@@ -27,6 +27,7 @@
             android:layout_margin="10dp"
             android:columnCount="2"
             android:padding="5dp"
+            android:id="@+id/items"
             android:layout_below="@id/my_toolbar">
 
             <ir.geek.parvaneh.squareLayout
@@ -50,7 +51,7 @@
                     android:layout_centerHorizontal="true"
                     android:textSize="25dp"
                     android:textColor="#ffffff"
-                    android:layout_marginBottom="50dp"/>
+                    android:layout_marginBottom="50dp" />
             </ir.geek.parvaneh.squareLayout>
 
             <ir.geek.parvaneh.squareLayout
