--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -49,7 +49,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/email"
+                    android:id="@+id/email_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
@@ -73,8 +73,8 @@
 
         </LinearLayout>
 
-
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,14 +82,18 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:layoutDirection="rtl">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/loginLink"
             android:textColor="@color/link"
             android:id="@+id/loginLink"/>
+
     </LinearLayout>
+
     <!--signup progress -->
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
