--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:background="@color/link"
-    android:backgroundTintMode="multiply"
+    android:layout_height="180dp"
+    android:orientation="vertical">
 
-    android:gravity="right"
-    android:orientation="vertical"
-    android:padding="20dp">
 
     <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:src="@drawable/logo" />
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/wave_bg2"
+        />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+
+        android:layout_marginTop="50dp"
+        android:src="@drawable/taheri"
+        app:civ_border_color="#ffffff"
+        app:civ_border_width="2dp"
+        android:elevation="20dp"
+        android:translationZ="10dp"
+        android:background="@drawable/nav_bac"
+        android:padding="5dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Ali Abbasi"
-        android:textColor="@color/white"
-        android:textStyle="bold" />
+        android:textSize="15dp"
+        android:textColor="#ffffff"
+        android:text="پروانه"
+        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="aliarabbasi5155@gmail.com"
-        android:textColor="@color/white" />
-</LinearLayout>
+
+</RelativeLayout>
