--- a/app/src/main/res/layout/navigation_view.xml
+++ b/app/src/main/res/layout/navigation_view.xml
@@ -4,23 +4,28 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="end"
+    android:textAlignment="center"
     android:background="#f0f0f0"
-    app:headerLayout="@layout/header"
     app:itemIconTint="@color/darkgray"
     app:itemTextColor="@color/darkgray"
-    app:menu="@menu/drawermenu"
     android:layoutDirection="rtl">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <include
+            android:id="@+id/navheader"
+            layout="@layout/header" />
+
+        <ListView
+            android:id="@+id/list_menu_items"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-        </RelativeLayout>
-
-    </ScrollView>
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:textAlignment="center" />
+    </LinearLayout>
 </android.support.design.widget.NavigationView>
